--- a/public/login.html
+++ b/public/login.html
@@ -37,7 +37,7 @@
                                     <label for="check-conectado">Mantenha-me conectado</label>
                                 </div>
                                 <div class="box-btn">
-                                    <button class="btn-entrar">&#10004</button>
+                                    <button onclick="login()" class="btn-entrar">&#10004</button>
                                 </div>
                                 <div class="box-spanContato">
                                     <span class="span-contatoLogin">
@@ -66,3 +66,5 @@
 </body>
 
 </html>
+
+<script src="./assets/Scripts/login.js"></script>
