--- a/public/index.html
+++ b/public/index.html
@@ -114,11 +114,7 @@
               <p>Missão</p>
             </div>
             <div>
-              Atuamos no segmento de monitoramento de sistemas SCADA(Supervisory
-              Control and Data Acquisition)na linha de produção da indústria
-              automobilística, utilizados para garantir que a linha de produção
-              esteja em condições para o trabalho. Garantir que o monitoramento
-              seja feito de forma eficaz e sem interrupções é nosso objetivo.
+              Garantir a continuidade operacional através do monitoramento preciso dos sistemas SCADA, transformando dados em ações preventivas, antecipando falhas e maximizando a produtividade da indústria automotiva.
             </div>
           </div>
 
@@ -128,11 +124,9 @@
                             <p>Visão</p>
             </div>
             <div>
-              Atuamos no segmento de monitoramento de sistemas SCADA(Supervisory
-              Control and Data Acquisition)na linha de produção da indústria
-              automobilística, utilizados para garantir que a linha de produção
-              esteja em condições para o trabalho. Garantir que o monitoramento
-              seja feito de forma eficaz e sem interrupções é nosso objetivo.
+              Ser reconhecida como líder global em soluções de monitoramento preventivo para sistemas industriais, redefinindo os padrões de eficiência operacional e
+              criando um futuro onde toda fábrica automotiva opere com previsibilidade total, 
+              antecipando qualquer falha.
             </div>
           </div>
 
@@ -142,11 +136,11 @@
               <p>Valores</p>
             </div>
             <div>
-              Atuamos no segmento de monitoramento de sistemas SCADA(Supervisory
-              Control and Data Acquisition)na linha de produção da indústria
-              automobilística, utilizados para garantir que a linha de produção
-              esteja em condições para o trabalho. Garantir que o monitoramento
-              seja feito de forma eficaz e sem interrupções é nosso objetivo.
+              • Confiabilidade <br>
+              • Inovação <br>
+              • Excelência <br>
+              • Segurança <br>
+              • Melhoria Contínua
             </div>
           </div>
         </div>
