Impactos de falhas atualizado

--- a/public/index.html
+++ b/public/index.html
@@ -310,27 +310,18 @@
           <div id="invisivel">
             <hr id="linha" />
             <b id="cor">
-              Interrupções na produção podem custar
-              <span class="red">milhões de dólares</span> por dia.
+              Inconsistências na qualidade dos veículos, resultando em recalls e <span class="red">deterioração da confiança do consumidor</span>.
 
               <br /><br />
-              Em 2022, uma falha no SCADA em uma fábrica de automóveis nos EUA
-              resultou em perdas de <span class="red">$1,5 milhão</span> em
-              apenas 8 horas
+              <span class="red">Quedas nas ações da empresa</span> após anúncios de interrupções significativas na produção sinalizam para investidores e o mercado uma vulnerabilidade operacional.
 
               <br /><br />
-              Estudos indicam que o custo médio de downtime na indústria
-              automotiva é de
-              <span class="red">$22.000</span> por minuto
+              <span class="red"> Brechas de segurança e vazamento de propriedade intelectual</span> ou dados de produção, prejudicando a credibilidade da empresa quanto à proteção de informações. 
 
               <br /><br />
-              A implementação de um sistema dedicado ao monitoramento contínuo
-              de recursos como CPU, disco e RAM nos servidores SCADA pode:
+              Fornecedores e parceiros podem <span class="red">reconsiderar relacionamentos comerciais</span> se percebem riscos operacionais constantes devido a falhas em sistemas críticos.
 
               <br /><br />
-              Reduzir o tempo de inatividade em até
-              <span class="green">50%</span> <br /><br />
-
               <button id="btn">Simular</button>
             </b>
           </div>
@@ -347,27 +338,19 @@
         <div id="invisivel">
           <hr id="linha" />
           <b id="cor">
-            Interrupções na produção podem custar
-            <span class="red">milhões de dólares</span> por dia.
+            Hackers podem <span class="red">explorar vulnerabilidades infiltrar os sistemas</span>, comprometendo processos críticos de produção ou extraindo dados confidenciais.
 
             <br /><br />
-            Em 2022, uma falha no SCADA em uma fábrica de automóveis nos EUA
-            resultou em perdas de <span class="red">$1,5 milhão</span> em
-            apenas 8 horas
+            Falhas no controle de equipamentos robóticos ou de processos automatizados podem resultar em acidentes de trabalho, colocando em <span class="red">risco a integridade física dos funcionários</span>.
 
             <br /><br />
-            Estudos indicam que o custo médio de downtime na indústria
-            automotiva é de
-            <span class="red">$22.000</span> por minuto
+            Alterações sutis nos sistemas de controle de qualidade podem resultar em veículos com <span class="red">falhas de segurança não detectadas</span> que só serão descobertas quando já estiverem em circulação.
 
             <br /><br />
-            A implementação de um sistema dedicado ao monitoramento contínuo
-            de recursos como CPU, disco e RAM nos servidores SCADA pode:
+            Comprometimento dos sistemas que monitoram componentes pode <span class="red">dificultar a identificação da origem de problemas</span> em caso de recalls.
 
             <br /><br />
-            Reduzir o tempo de inatividade em até
-            <span class="green">50%</span> <br /><br />
-
+    
             <button id="btn">Simular</button>
           </b>
         </div>
