--- a/public/login.html
+++ b/public/login.html
@@ -22,11 +22,11 @@
                     <div class="div-input">
                         <div class="box-email">
                             <span class="span-label_login">E-mail:</span>
-                            <input type="text">
+                            <input type="text" placeholder="cliente@email.com">
                         </div>
                         <div class="box-senha">
                             <span class="span-label_login">Senha:</span>
-                            <input type="password">
+                            <input type="password" placeholder="#Senha123">
                         </div>
                     </div>
                 </div>
