Sobre o negócio atualizado

--- a/public/index.html
+++ b/public/index.html
@@ -202,41 +202,72 @@
             <!-- Slides -->
             <div class="swiper-slide">
               <div>
-                <h1>SCADA instalado</h1>
+                <h1>SCADA monitora</h1>
+                <i class="bx bxs-factory" style="color: #f6f3f3"></i>
+                <p>
+                  O sistema SCADA já instalado monitora a linha de produção de uma fábrica de automóveis.
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div>
+                <h1>Servidor SCADA</h1>
                 <i class="bx bx-server" style="color: #f6f3f3"></i>
                 <p>
-                  Ter o sistema SCADA instalado, com seus controladores e
-                  sensores se comunicando com o servicdor central
+                  Sistema SCADA possui um servidor onde centraliza e processa os dados.
                 </p>
               </div>
             </div>
             <div class="swiper-slide">
               <div>
-                <h1>SCADA instalado</h1>
-                <i class="bx bx-server" style="color: #f6f3f3"></i>
+                <h1>Opticar Monitora</h1>
+                <i class="bx bx-analyse" style="color: #f6f3f3"></i>
                 <p>
-                  Ter o sistema SCADA instalado, com seus controladores e
-                  sensores se comunicando com o servicdor central
+                  Nosso sistema irá monitorar o sevidor para prevenir falhas e garantir seu funcionamento.
                 </p>
               </div>
             </div>
             <div class="swiper-slide">
               <div>
-                <h1>Implementar Optcar</h1>
-                <i class="bx bx-server" style="color: #f6f3f3"></i>
+                <h1>Sistema Alerta</h1>
+                <i class="bx bx-error-alt" style="color: #f6f3f3"></i>
                 <p>
-                  Ter o sistema SCADA instalado, com seus controladores e
-                  sensores se comunicando com o servicdor central
+                  Caso o nosso sistema encontre uma falha ou mal uso do hardware no servidor.
                 </p>
               </div>
             </div>
             <div class="swiper-slide">
               <div>
-                <h1>SCADA instalado</h1>
-                <i class="bx bx-server" style="color: #f6f3f3"></i>
+                <h1>Sistema <br>Notifica</h1>
+                <i class="bx bxs-bell-ring" style="color: #f6f3f3"></i>
                 <p>
-                  Ter o sistema SCADA instalado, com seus controladores e
-                  sensores se comunicando com o servicdor central
+                  É emitido um alarme como alerta para o o funcionário responsável!
+                </p>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div>
+                <h1>Relatório Detalhado</h1>
+                <i class="bx bx-chip" style="color: #f6f3f3"></i>
+                <p>
+                  Descrevemos qual é o hardware com defeito com o maior detalhamento possível!
+                </p>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div>
+                <h1>Funcionário Preparado</h1>
+                <i class="bx bx-hard-hat" style="color: #f6f3f3"></i>
+                <p>
+                  Para que a empresa garanta a manutenção do sistema com eficiência e sucesso!
+                </p>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div>
+                <h1>Dashboard Personalizada</h1>
+                <i class="bx bx-bar-chart-square" style="color: #f6f3f3"></i>
+                <p>
+                 Base centralizada com histórico de incidentes para evitar falhas repetidas e futuras.
                 </p>
               </div>
             </div>
