ajustes graf alertas

--- a/public/dashAnalise.html
+++ b/public/dashAnalise.html
@@ -79,8 +79,7 @@
                     <p class="descricao"> Acompanhe registros históricos capturados do seu servidor</p>
                 </div>
                 <div class="servidor">
-                    <i class='bx bx-info-circle'
-                        style='color:#ffffff; background-color: #2C3E50; border-radius: 100%; padding: 0.2vw;' id="i"></i>
+                    <i class='bx bx-info-circle' id="serv"></i>
                     <select name="" id="sltServidor">
                         <option value="">Servidor: SP-01</option>
                         <option value="">Servidor: SP-02</option>
@@ -180,7 +179,7 @@
                         </div>
                     </div>
     
-                    <canvas id="discoChart"></canvas>
+                    <canvas id="alertasChart"></canvas>
 
                 </div>
             </div>
