feat: sessão por cargo adicionada

--- a/web-data-viz/public/dashMonitoramento.html
+++ b/web-data-viz/public/dashMonitoramento.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="assets/styles/monitoramento.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="./assets/Scripts/sessao.js" defer></script>
     <link rel="icon" type="image/png" href="assets/images/logoOpticar.png">
     <script src="./assets/Scripts/dashMonitoramento.js" defer></script>
     <script src="./assets/Scripts/cpu.js" defer></script>
