--- a/web-data-viz/public/funcionarios.html
+++ b/web-data-viz/public/funcionarios.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link rel="stylesheet" href="assets/styles/monitoramento.css"> -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <script src="./assets/Scripts/sessao.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="icon" type="image/png" href="assets/images/logoOpticar.png">
     <link rel="stylesheet" href="./assets/styles/funcionarios.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11" defer></script>
     <script src="./assets/Scripts/alertas.js" defer></script>
-    <title>Document</title>
+    <title>Funcionarios</title>
 </head>
 
 <body>
@@ -45,9 +46,12 @@
         <div class="contentContainer">
             <div class="perfilContainer">
                 <div class="perfil">
-                    <p>Shelly Douglas</p><br>
+
                     <!-- <p>cargo00</p> -->
                     <i class='bx bx-user'></i>
+                    <h3 id="usuarioNome"></h3>
+                    <!-- Luciano Alves -->
+                    <h3 class="desktop-email" style="display: none;" id="usuarioEmail"></h3>
                 </div>
             </div>
 
