feat: listagem de usuario por cargo

--- a/web-data-viz/public/funcionarios.html
+++ b/web-data-viz/public/funcionarios.html
@@ -59,7 +59,8 @@
             <div class="titleContainer">
                 <h1>Funcionários</h1>
 
-                <button class="btnCadastro" onclick="abrirModalCriar()">Cadastrar <i class='bx bx-plus-medical'></i></button>
+                <button class="btnCadastro" onclick="abrirModalCriar()">Cadastrar <i
+                        class='bx bx-plus-medical'></i></button>
             </div>
 
             <div class="funcionariosContainer">
@@ -74,7 +75,7 @@
                     </tr>
                 </table> -->
                 <table id="tabela-alertas" class="tabelaContainer">
-                    <tr>
+                    <!-- <tr>
                         <th>Nome</th>
                         <th>email</th>
                         <th>Cargo</th>
@@ -101,7 +102,7 @@
                         <td>
                             <i class='bx bxs-edit' onclick="abrirModal()"></i>
                         </td>
-                    </tr>
+                    </tr> -->
                 </table>
                 <div class="pagination" id="paginacao"></div>
             </div>
