--- a/web-data-viz/public/funcionarios.html
+++ b/web-data-viz/public/funcionarios.html
@@ -47,12 +47,23 @@
         <div class="contentContainer">
             <div class="perfilContainer">
                 <div class="perfil">
+                    <div class="empresa">
+                    <i class='bx bxs-business' undefined></i>
+                        <h3 id="empresaNome"></h3>
+                    </div>
 
-                    <!-- <p>cargo00</p> -->
-                    <i class='bx bx-user'></i>
-                    <h3 id="usuarioNome"></h3>
-                    <!-- Luciano Alves -->
-                    <h3 class="desktop-email" style="display: none;" id="usuarioEmail"></h3>
+
+                    <div class="persona">
+                        <i class='bx bxs-user-circle'></i>
+                        <div>
+                            <h3 id="usuarioNome">Luciano Alves</h3>
+                            <h3 class="desktop-email" style="display: none;" id="usuarioEmail">luciano@empresa.com</h3>
+                        </div>
+                        <div>
+                            <i class='bx bx-chevron-down'></i>
+                        </div>
+                    </div>
+
                 </div>
             </div>
 
