--- a/web-data-viz/public/alertas.html
+++ b/web-data-viz/public/alertas.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./assets/styles/alertas.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11" defer></script>
     <script src="./assets/Scripts/alertas.js" defer></script>
-    <title>Document</title>
+    <title>Alertas</title>
 </head>
 
 <body>
@@ -46,9 +46,22 @@
         <div class="contentContainer">
             <div class="perfilContainer">
                 <div class="perfil">
-                    <p>Shelly Douglas</p><br>
-                    <!-- <p>cargo00</p> -->
-                    <i class='bx bx-user'></i>
+
+                    <div class="empresa">
+                        <i class='bx bxs-business' undefined></i>
+                        <h3 id="empresaNome"></h3>
+                    </div>
+                    <div class="persona">
+                        <i class='bx bxs-user-circle'></i>
+                        <div class="usuarioContainer">
+                            <h3 id="usuarioNome">Luciano Alves</h3>
+                            <h3 class="desktop-email" id="usuarioEmail">
+                                luciano@empresa.com</h3>
+                        </div>
+                        <div>
+                            <i class='bx bx-chevron-down'></i>
+                        </div>
+                    </div>
                 </div>
             </div>
 
