--- a/web-data-viz/public/funcionarios.html
+++ b/web-data-viz/public/funcionarios.html
@@ -28,18 +28,6 @@
 
             <ul id="ul_links" class="nav-links ">
 
-                <li class="li-active">
-                    <i class='bx bx-desktop' style='color:#ffffff'></i>
-                    <span>Monitoramento</span>
-                </li>
-                <li>
-                    <i class='bx bxs-bell-ring' style='color:#ffffff'></i>
-                    <span>Alertas</span>
-                </li>
-                <li>
-                    <i class='bx bx-server' style='color:#ffffff'></i>
-                    <span>Servidores</span>
-                </li>
             </ul>
         </div>
 
@@ -48,16 +36,17 @@
             <div class="perfilContainer">
                 <div class="perfil">
                     <div class="empresa">
-                    <i class='bx bxs-business' undefined></i>
+                        <i class='bx bxs-business' undefined></i>
                         <h3 id="empresaNome"></h3>
                     </div>
 
 
                     <div class="persona">
                         <i class='bx bxs-user-circle'></i>
-                        <div>
+                        <div class="usuarioContainer">
                             <h3 id="usuarioNome">Luciano Alves</h3>
-                            <h3 class="desktop-email" style="display: none;" id="usuarioEmail">luciano@empresa.com</h3>
+                            <h3 class="desktop-email" id="usuarioEmail">
+                                luciano@empresa.com</h3>
                         </div>
                         <div>
                             <i class='bx bx-chevron-down'></i>
